resloved deprecated issue on version 20